# socratiq

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c5bd93240f4_add_goal_to_courses.py  220861084881_add_celery_task_id_to_sources.py  258d5c930d9c_add_whisper_configs_table.py  3b36dc85a8ce_add_model_config_tables.py  4b7c2f1a9d11_add_source_tasks_table.py  5e4b2d4358c5_add_context_window_tokens_to_model_.py  6d8cec3bdd57_add_labs_table.py  7b674642962a_add_model_type_to_model_configs.py  8650c9317bb1_add_section_progress_table.py  (+18 more)
backend/app/: __init__.py  config.py  main.py  prompt_template.py
backend/scripts/: backfill_concept_prereqs.py  seed_demo.py
backend/tests/: conftest.py  test_activity.py  test_agentic_outline_e2e.py  test_arq_app.py  test_auth_service.py  test_bilibili_credential.py  test_citations.py  test_concept_prerequisites.py  test_content_analyzer.py  test_content_ingestion.py  test_content_key.py  test_cost_guard.py  test_course_regeneration.py  test_diagnostic.py  test_e2e_smoke.py  test_exercises.py  test_health.py  test_knowledge_graph.py  test_lab_generator.py  test_lesson_generator.py  test_memory.py  test_mentor_agent.py  test_reference_fetcher.py  test_research_enrichment.py  test_section_override.py  test_section_planner.py  test_sentence_course.py  test_setup.py  test_smoke.py  test_source_tasks.py  test_sources_materials.py  test_spaced_repetition.py  test_teaching_asset_planner.py  test_time_estimator.py  test_token_budget.py  test_translation.py  test_video_to_course.py
(+329 files in other folders)
